force-app/main/default/objects/Contato_do_fluxo_do_Email__c/Contato_do_fluxo_do_Email__c.object-meta.xml
<CustomObject>
    <label>Contato do fluxo do Email</label>
    <nameField>
        <label>Nome de Contato do fluxo do Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contatos do fluxo do Email</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>