force-app/main/default/objects/Contato_do_fluxo_do_Email__c/fields/Fluxo_Email__c.field-meta.xml
<CustomField>
    <fullName>Fluxo_Email__c</fullName>
    <label>Fluxo de Email</label>
    <referenceTo>Fluxo_de_Email__c</referenceTo>
    <relationshipLabel>Contatos do fluxo do Email</relationshipLabel>
    <relationshipName>Contatos_do_fluxo_do_Email</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>