force-app/main/default/objects/Contato_do_fluxo_do_Email__c/fields/Nome_contato_fluxo__c.field-meta.xml
<CustomField>
    <fullName>Nome_contato_fluxo__c</fullName>
    <displayFormat>CF-{00000000}</displayFormat>
    <label>Nome do contato do fluxo</label>
    <type>AutoNumber</type>
</CustomField>