force-app/main/default/objects/Contato_do_fluxo_do_Email__c/fields/Papel_contato__c.field-meta.xml
<CustomField>
    <fullName>Papel_contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Papel do contato</label>
    <referenceTo>Papel_contato__c</referenceTo>
    <relationshipLabel>Contatos do fluxo do Email</relationshipLabel>
    <relationshipName>Contatos_do_fluxo_do_Email</relationshipName>
    <type>Lookup</type>
</CustomField>